<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Droid Hospital</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="login">Login</string>
    <string name="login_field">Email</string>
    <string name="password">Senha</string>
    <string name="rooms">Quartos</string>
    <string name="room">Quarto</string>
    <string name="name">Nome</string>
    <string name="general_info">Dados Gerais</string>
    <string name="applications_made">Aplicações Efetuadas</string>
    <string name="applications_todo">Aplicações Pendentes</string>
    <string name="date_of_entrance">Data de Entrada:</string>
    <string name="age">Idade:</string>
    <string name="smoker">Fumante:</string>
    <string name="weight">Peso:</string>
    <string name="allergies">Alergias:</string>
    <string name="wheight_measure">KG</string>
    <string name="yes">Sim</string>
    <string name="no">Não</string>
    <string name="nova_prescricao">Nova Prescrição</string>
    <string name="title_activity_nova_prescricao">Nova Prescrição</string>
    <string name="leito">Leito</string>
    <string name="paciente">Paciente</string>
    <string name="titulo_prescricao">Prescrição</string>
    <string name="botao_incluir">Incluir</string>
    <string name="principio">Princípio</string>
    <string name="referencia">Referência</string>
    <string name="laboratorio">Laboratório</string>
    <string name="concentracao">Concentr.</string>
    <string name="posologia">Posologia</string>
    <string name="hora_inicial">Hora Inicial</string>
    <string name="qtd_aplicacoes">Qtd Aplic.</string>
    <string name="intervalo">Intervalo</string>
    <string name="not_connected">Houve um erro na conexão com o Servidor</string>
    <string name="nenhum_medicamento_encontrado">Nenhum medicamento encontrado</string>
    <string name="bad_login">Login ou senha inválida</string>
    <string name="action_agenda">Agenda</string>
    <string name="ok">OK</string>
    <string name="cancel">cancelar</string>
    <string name="hours">Horas</string>
    <string name="minutes">Minutos</string>
    <string name="hours_lower">horas</string>
    <string name="hour_lower">hora</string>
    <string name="minutes_lower">minutos</string>
    <string name="minute_lower">minuto</string>
    <string name="and"> e </string>
    <string name="medice_required">Selecione um medicamento</string>
    <string name="saved_sucessuful">Salvo com sucesso</string>
    <string name="saved_wrong">Ocorreu um erro ao salvar sua operação.</string>
    <string name="title_activity_paciente_aplicacoes">Aplicações</string>
    <string name="titulo_aplicacao">Aplicações</string>
    <string name="horario">Horário</string>
    <string name="hora_demo">00:00</string>
    <string name="data_demo">12/03/1990</string>
    <string name="medicamento">Medicamento</string>
    <string name="title_activity_agenda">Minha Agenda</string>
    <string name="application_mande">Aplicação Efetuada com Sucesso</string>
    <string name="application_not_possible">Aplicação não permitida.</string>
    <string name="minimum_one_minute">Mínimo 1 minuto de intervalo.</string>
    
	
    
</resources>