<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/Gray"
    android:clickable="false"
    android:focusable="false"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/margem_vertical"
    android:paddingLeft="@dimen/margem_horizontal"
    android:paddingRight="@dimen/margem_horizontal"
    android:paddingTop="@dimen/margem_vertical" 
    
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.89"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/descricao_data_textView"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:text="@string/data_demo"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/Black" />

        <TextView
            android:id="@+id/descricao_horario_textView"
            android:layout_width="65dp"
            android:layout_height="25dp"
            android:text="@string/hora_demo"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/Green" />
    </LinearLayout>
    <TextView
        android:id="@+id/descricao_medicamento_textView"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_weight="0.89"
        android:text="@string/medicamento"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/Green" />

    <ImageView
        android:id="@+id/descricao_aplicacao_injection"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:src="@drawable/injection"
         />

</LinearLayout>