<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TextView
        android:id="@+id/dados_gerais_data_entrada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/dados_gerais_data_entrada_label"
        android:layout_marginLeft="23dp"
        android:layout_toRightOf="@+id/dados_gerais_data_entrada_label"
        android:text="03/03/2012"
        android:textColor="#000000"
        android:textAppearance="?android:attr/textAppearanceMedium"
        
         />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/dados_gerais_data_entrada_label"
        android:layout_below="@+id/dados_gerais_data_entrada"
        android:text="@string/age"
        android:layout_marginTop="10dp"
        android:textColor="#000000"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/dados_gerais_fumante"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView5"
        android:layout_alignBottom="@+id/textView5"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@+id/textView5"
        android:text="Sim"
        android:textColor="#000000"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/dados_gerais_data_entrada_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="14dp"
        android:text="@string/date_of_entrance"
        android:textAppearance="?android:attr/textAppearanceMedium" 
        android:textColor="#000000"/>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView5"
        android:layout_alignLeft="@+id/textView2"
        android:text="@string/weight"
        android:layout_marginTop="10dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/textView5"
        android:layout_marginTop="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView7"
        android:layout_below="@+id/dados_gerais_peso"
        android:text="@string/smoker"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/textView9"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView5"
        android:layout_below="@+id/textView5"
        android:text="@string/allergies"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/dados_gerais_alergias"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView9"
        android:text="Leite, Água, Álcool, Paracetamol, Ferro, Azeite, ETc.."
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:background="@color/Silver"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/dados_gerais_peso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_toRightOf="@+id/textView7"
        android:text="100 KG"
        android:textAppearance="?android:attr/textAppearanceMedium" 
        android:textColor="#000000"/>

    <TextView
        android:id="@+id/dados_gerais_idade_extenso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/dados_gerais_peso"
        android:layout_toRightOf="@+id/textView2"
        android:text="33 anos e 11 meses"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000000" />

</RelativeLayout>